--- a/src/Components/UserCard.css
+++ b/src/Components/UserCard.css
@@ -45,7 +45,7 @@
   border: 1px solid black;
   border-radius: 10px;
   color: white;
-  width: 50%;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
