Made a small change in css

--- a/src/Components/UserPage.css
+++ b/src/Components/UserPage.css
@@ -17,6 +17,7 @@
 #deatils{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     align-content: center;
