--- a/src/Components/UserCard.css
+++ b/src/Components/UserCard.css
@@ -14,6 +14,12 @@
   font-family: 'Roboto Slab', serif;
 }
 
+#nav-bar #logo p{
+  opacity: 0.5;
+  margin-top: -20px;
+  font-size: 0.6em;
+}
+
 #nav-bar #srch form input{
   padding: 10px;
   font-size: 1em;
@@ -52,6 +58,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  padding: 20px;
   background-image:linear-gradient(to right, #36454F, #343434, #28282B) ;
 }
 
@@ -73,15 +80,19 @@
 #button button{
   padding: 10px;
   font-size: 1.2em;
-  background-image:linear-gradient(to right, #36454F, #343434, #28282B) ;
+  background-color: #300008;
   color: white;
   cursor: pointer;
-  border: 0px solid black;
-  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  transition: 150ms ease-in-out;
 }
 
 #button button:hover{
-  color: white;
-  background-color: black;
-  box-shadow: 0px 4px 4px 4px white;
+  color: black;
+  background-color: white;
+}
+
+.Uname{
+  font-weight: lighter;
+font-family: 'Montserrat', sans-serif;
 }
