--- a/src/Components/UserPage.css
+++ b/src/Components/UserPage.css
@@ -2,6 +2,7 @@
     height: 5em;
 }
 
+
 #head-bar{
     display: flex;
     justify-content: space-between;
@@ -35,12 +36,14 @@
     border: 1px solid black;
     display: flex;
     flex-direction: column;
+    padding: 20px;
 }
 
 #follow{
     border: 1px solid black;
     display: flex;
     flex-direction: column;
+    padding: 20px;
 }
 
 #repo li {
